// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas con el componente <GifGrid /> debe de mostrar items cuando se cargan 1`] = `
<Fragment>
  <h3
    className="nimate__animated animate__flash"
  >
    Akame ga Kill
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="this is title"
      url="https://localhost/images/test.jpg"
    />
    <GifGridItem
      id="ABCD"
      key="ABCD"
      title="this is title"
      url="https://localhost/images/test.jpg"
    />
  </div>
</Fragment>
`;

exports[`Pruebas con el componente <GifGrid /> debe renderizar el componente 1`] = `
<Fragment>
  <h3
    className="nimate__animated animate__flash"
  >
    Akame ga Kill
  </h3>
  <h3>
    Loading...
  </h3>
  <div
    className="card-grid"
  />
</Fragment>
`;
